src/parser.ts
import {
    Expression, Literal, Unary, Binary, Value,
    UnaOperator,
    BinOperator,
    get_sign,
    Statement,
    Block,
    Variable,
    ReturnStatement,
    VariableDec,
    Print,
    FunctionDec,
    Assignment,
    ExpressionStatement,
    If,
    Logic,
    While,
    Call,
} from"../lib/types";
import {
    TokenType,
    Token,
    token_length,
} from "./scanner"
import {
    UntypedscriptError,
    ErrorKind,
    error_with_length,
    has_errors,
    error_with_token,
} from "./error";

export type Parser = {
    input: Array<Token>,
    output: Array<Expression | Statement>,
    errors: Array<UntypedscriptError>,
    has_error: boolean,
    current: number,
    end: number
    latest_was_expression: boolean,
    allow_return_statement: boolean,
}

export type ParserResult = Array<Expression | Statement> | Array<UntypedscriptError>;

/**
 * Helper function that returns errors if at least 1 error ocured while parsing 
 * else it returns the array of AST:s
 * @param tokens an array of tokens
 * @returns Either Array<Statement | Expression> or Array<UntypescriptError>
 */
export function parse_tokens(tokens: Array<Token>): ParserResult {
    const parser = parse(tokens);
    if (has_errors(parser.errors)) {
        return parser.errors;
    }
    return parser.output;
}
/**
 * Main parsing driver.
 * Initializes the parser state and repeatedly parses until the end-of-file 
 * token is reached. Syntax errors are caught and stored in the parser state, 
 * after which the parser attempts to recover using synchronization.
 *
 * @param tokens Array of tokens produced by the scanner
 * @returns Parser object containing the generated AST nodes and
 *          any errors encountered during parsing
 */
export function parse(tokens: Array<Token>): Parser {
    const parser: Parser = {
        input: tokens,
        output: [],
        errors: [],
        has_error: false,
        current: 0,
        latest_was_expression: false,
        allow_return_statement: false,
        end: tokens.length - 1
    }
    // Checks if the next token is the end of file
    function at_end(): boolean{
        return peek().type === TokenType.EOF;
    }
    // Check if the current token matches a given TokenType
    function check(type: TokenType): boolean { 
        return peek().type === type;
    }
    // Gets the previous Token
    function previous(): Token {
        return parser.input[parser.current - 1];
    }
    // Gets the current Token
    function peek(): Token {
        return parser.input[parser.current];
    }
    // Gets the current Token and moves to the next
    function advance(): Token{
        if(!at_end()) {
            parser.current++;
        }
        return previous();
    }
    // Checks that the current token matches the given type then moves on
    // Throws an error with the provided message if the token type doesn't match
    function consume(token_type: TokenType, message: string): Token{
        if(check(token_type)){
            return advance();
        }
        throw error_with_length(ErrorKind.MissingToken, message, peek().index, token_length(peek()));
    }

    // Checks if the current token matches any of the given types
    // Returns true and advances if it does, false and stays in place otherwise
    function match(...types: Array<TokenType>): boolean {
        for(let i = 0; i < types.length; i++) {
            if(check(types[i])){
                advance();
                return true;
            }
        }
        return false;
    }

    /**
     * Parses a single statement.
     *
     * Determines which kind of statement is present based on the next
     * token and delegates to the appropriate parsing function. If none
     * of the known statement types match, the function parses an
     * expression and optionally converts it into an expression statement.
     *
     * @returns Parsed Statement or Expression node
     */
    function parse_statement(): Expression | Statement {
        if (parser.latest_was_expression) {
            throw error_with_token(ErrorKind.SyntaxError, "Expected ; after expression. Bare expressions must be the last line of a program or block", previous());
        }
        parser.latest_was_expression = false;
        if(match(TokenType.VAR)) return parse_var();
        if(match(TokenType.FN)) return parse_fn();
        if(match(TokenType.RETURN)) return parse_return();
        if(match(TokenType.PRINT)) return parse_print();
        if(match(TokenType.BREAK)) return parse_break();
        const expr = parse_expression();
        if (peek().type === TokenType.SEMICOLON) {
            advance();
            parser.latest_was_expression = false;
            return make_expression_statement(expr, expr.index);
        }
        switch (expr.type) {
            case "Block":
            case "While":
                break;
            default:
                parser.latest_was_expression = true;
        }
        return expr;
    }  

    /**
     * Parses a while-expression.
     *
     * Syntax:
     *      while <condition> [:label] { <block> }
     *
     * The condition expression is evaluated before each iteration.
     * A label may optionally be provided to allow labelled breaks.
     *
     * @returns While AST node
     */
    function parse_while(): Expression {
        const condition: Expression = parse_expression();
        let name : string | null = null // Must be a 
        if(match(TokenType.COLON)){
            name = get_sign(consume(
                    TokenType.IDENTIFIER, 
                    "Expected an identifier after :")) as string;
        }
        if(match(TokenType.LEFT_BRACE)){
            const body:Block = parse_block() as Block;
            body.label = name;
            return make_while(condition, body, name, peek().index)
        }
        throw error_with_token(ErrorKind.MissingToken, "Expected block after while", peek());
    }

    /**
     * Parses an infinite loop expression.
     *
     * Syntax:
     *      loop [:label] { <block> }
     *
     * This construct is internally represented as a while-loop with a
     * constant true condition.
     *
     * @returns While AST node with condition `true`
     */
    function parse_loop(): Expression {
        const index: number = peek().index;
        const condition: Expression = make_literal(true, index);
        let name : string | null = null
        if(match(TokenType.COLON)){
            name = get_sign(consume(
                    TokenType.IDENTIFIER, 
                    "Expected an identifier after :")) as string;
        }
        if(match(TokenType.LEFT_BRACE)){
            const body: Block = parse_block() as Block;
            return make_while(condition, body, name, index)
        }
        throw error_with_token(ErrorKind.MissingToken, "Expected block after while", peek());
    }

    /**
     * Parses a break statement.
     *
     * Syntax:
     *      break;
     *      break :label;
     *      break return <expression>;
     *
     * A break may optionally target a labelled loop and may also
     * return a value to the surrounding context.
     *
     * @returns Break statement node
     */
    function parse_break(): Statement {
        let index = peek().index;
        let label: string | null = null;
        let ret_val: Expression |null = null;
        if(match(TokenType.COLON)) {
            index = peek().index;
            label = get_sign(consume(TokenType.IDENTIFIER, "Expected an identifier after :")) as string;
        }
        if(match(TokenType.SEMICOLON)) {
            return {
                type: "Break",
                index,
                label,
                return_expr: null,
            };
        }
        if (match (TokenType.RETURN)) {
            parser.allow_return_statement = true;
            ret_val = (parse_return() as ReturnStatement).expression;
            parser.allow_return_statement = false;
            return {
                type: "Break",
                index,
                label,
                return_expr: ret_val,
            }
        }
        throw new UntypedscriptError(ErrorKind.MissingToken, "Expected 'return', ';' or ':' after break", index);
    }

    // Parses a print statement
    function parse_print(): Statement {
        const index: number = previous().index;
        const expr: Expression = parse_expression();
        consume(TokenType.SEMICOLON, "Expected a ; at the end of print statement")
        return make_print(expr, index);
    }


    /**
     * Parses a variable declaration.
     *
     * Syntax:
     *      var <identifier> [= <expression>] ;
     *
     * Variables may optionally be initialized during declaration.
     *
     * @returns Variable declaration AST node
     */
    function parse_var(): Statement {
        const index: number = previous().index;
        const identifier_index: number = peek().index;
        const name: string = consume(
                        TokenType.IDENTIFIER,
                        "Expected identifier after var").value as string
        let init: Expression | null = null;
        if(match(TokenType.EQUAL)){
            init = parse_expression();
        }
        consume(TokenType.SEMICOLON, "Expected a ; at the end of variable declaration");
        return make_var(name, init, index, identifier_index);
    }

    /**
     * Parses a function declaration.
     *
     * Syntax:
     *      fn <identifier> ( <parameters> ) { <block> }
     *
     * Parameters are stored as an ordered list of identifiers.
     * The function body is parsed as a block expression.
     *
     * @returns Function declaration AST node
    */
    function parse_fn(): Statement{
        let index: number = previous().index;
        const name: string = get_sign(consume(
                TokenType.IDENTIFIER,
                "Expected an identifier in head of function declaration")) as string
        const parameters: Array<string> = []
        consume(TokenType.LEFT_PAREN, "Expect '(' after function name");
        if (!check(TokenType.RIGHT_PAREN)) {
            do {
                parameters.push(get_sign(consume(
                        TokenType.IDENTIFIER, 
                        "Expect parameter name."))as string);
                        
            } while (match(TokenType.COMMA));
        }
        consume(TokenType.RIGHT_PAREN, "Expect ')' after parameters.");
        if(match(TokenType.LEFT_BRACE)) {
            parser.allow_return_statement = true;
            const body: Block = parse_block() as Block;
            parser.allow_return_statement = false;
            return make_fn(name, parameters, body, index);
        }

        throw error_with_token(ErrorKind.MissingToken, "Expected body after function head", peek());
    }


    /**
     * Parses a return statement.
     *
     * Return statements are only valid inside function bodies or as part
     * of a break statement. The returned expression becomes the value
     * of the function call.
     *
     * Syntax:
     *      return <expression> ;
     *
     * @returns Return statement AST node
     */
    function parse_return(): Statement {
        const index: number = previous().index;
        if (!parser.allow_return_statement) {
            throw error_with_token(ErrorKind.ParseError, "Return statement must be inside a function declaraction or as part of a break statement", peek());
        }
        const expr: Expression = parse_expression();
        consume(TokenType.SEMICOLON, "Expected a ; at the end of the return statement");
        return make_return(expr, index);
    }
    /**
     * Parses the highest level of expressions.
     *
     * This function handles constructs that behave like expressions
     * but introduce control flow, such as if-expressions, loops, and
     * blocks. If none of these constructs match, parsing continues
     * with assignment expressions.
     *
     * @returns Expression AST node
     */
    function parse_expression(): Expression {
        if(match(TokenType.WHILE)) return parse_while();
        if(match(TokenType.LOOP)) return parse_loop();
        if(match(TokenType.LEFT_BRACE)) return parse_block();
        if(match(TokenType.IF)) return parse_if();
        const expr: Expression = parse_assignment();
        return expr;
    }

    // Parses an if/else expression
    function parse_if(): Expression {
        const index: number = previous().index;
        const condition: Expression = parse_expression();
        const if_then: Expression = parse_expression();
        let if_else: Expression | null = null
        if(match(TokenType.ELSE)){
            if_else = parse_expression();
        }
        return make_if(condition, if_then, if_else, index);
    }

    // Parses a block expression
    function parse_block(): Expression {
        const body: Array<Expression | Statement> = []
        parser.latest_was_expression = false;
        while (!check(TokenType.RIGHT_BRACE) && !at_end()) {
            // We need to catch errors inside of here so we can synchronize and exit the block gracefully
            try {
                body.push(parse_statement());
            } catch (e) {
                parser.has_error = true
                parser.latest_was_expression = false;
                parser.errors.push(e as UntypedscriptError);
                synchronize();
            }
        }
        consume(TokenType.RIGHT_BRACE, "Expected } after block");
        parser.latest_was_expression = false;
        return make_block(body, previous().index)
    }
    /**
     * Parses assignment expressions.
     *
     * Syntax:
     *      <identifier> = <expression>
     *
     * The left-hand side must be a valid assignment target
     * (currently only variables).
     *
     * @returns Assignment AST node or lower-precedence expression
     */
    function parse_assignment(): Expression {
        const target_token: Token = peek();
        let expr: Expression = parse_logic_or();
        if(match(TokenType.EQUAL)){
            const value: Expression = parse_expression();
            if(expr.type === "Variable") {
                return make_assignment(expr.name, value, expr.index);
            }
            throw error_with_token(ErrorKind.InvalidAssignment, "Invalid assignment target.", target_token);
        }
        return expr;
    }

    // Parses a logical or expression
    function parse_logic_or(): Expression {
        let expr: Expression = parse_logic_and();
        while(match(TokenType.OR)){
            const index: number = previous().index
            const right: Expression = parse_logic_and();
            expr = make_logic(expr, "or", right, index);
        }
        return expr;
    }

    // Parses a logical and expression
    function parse_logic_and(): Expression {
        let expr: Expression = parse_equality();
        while(match(TokenType.AND)){
            const index: number = previous().index
            const right: Expression = parse_equality();
            expr = make_logic(expr, "and", right, index);
        }
        return expr;
    }
    /**
     * Binary expression parsing.
     *
     * The functions parse_equality(), parse_comparison(), parse_term(),
     * parse_factor(), and parse_exponent() all follow the same pattern
     * for parsing binary operations.
     *
     * Grammar rule (general form):
     *      Level → NextLevel ( operator NextLevel )*
     *
     * Each function parses expressions at a specific precedence level.
     * Lower-precedence functions call higher-precedence ones, forming a
     * hierarchy that enforces the correct order of operations.
     */
    function parse_equality(): Expression {
        let equal: Expression = parse_comparison();
        while(match(TokenType.BANG_EQ, TokenType.DOUBLE_EQUAL)){
            const index: number = previous().index
            const operator: BinOperator = get_sign(previous()) as BinOperator;
            const right: Expression = parse_comparison();
            equal = make_binary(operator, equal, right, index);
        }
        return equal;
    }

    // Parses a comparison binary expression
    function parse_comparison(): Expression {
        let comp: Expression = parse_term();
        while(match(TokenType.LESS, TokenType.LESS_EQ,
                    TokenType.GREATER, TokenType.GREATER_EQ)) {
            const index: number = previous().index
            const operator: BinOperator = get_sign(previous()) as BinOperator;
            const right: Expression = parse_term();

            comp = make_binary(operator, comp, right, index);
        }
        return comp;
    }

    // Parses a term (addition/subtraction) binary expression
    function parse_term(): Expression {
        let term: Expression = parse_factor();
        while(match(TokenType.PLUS, TokenType.MINUS)){
            const index = previous().index;
            const operator: BinOperator = get_sign(previous()) as BinOperator
            const right: Expression  = parse_factor();
            term = make_binary(operator, term, right, index);
        }
        return term;
    }

    // Parses a factor (multiplication/division) binary expression
    function parse_factor(): Expression {
        let fact: Expression = parse_exponent();
        while(match(TokenType.TIMES, TokenType.DIVIDE)) {
            const index: number = previous().index; 
            const operator: BinOperator = get_sign(previous()) as BinOperator;
            const right: Expression  = parse_exponent();
            fact = make_binary(operator, fact, right, index);
        }
        return fact;
    }
    
    // Parses an exponentation binary expression
    function parse_exponent(): Expression {
        let base: Expression = parse_unary();
        while(match(TokenType.POW)) {
            const index: number = previous().index; 
            const operator: BinOperator = get_sign(previous()) as BinOperator;
            const exponent: Expression  = parse_unary();
            base = make_binary(operator, base, exponent, index);
        }
        return base;
    }
    /**
     * Parses unary expressions.
     *
     * Grammar rule:
     *      Unary → ("-" | "!") Unary | Call
     *
     * Handles negation and logical not operators.
     */
    function parse_unary(): Expression {
        if(match(TokenType.MINUS, TokenType.BANG)){
            const index: number = previous().index;
            const operator: UnaOperator = get_sign(previous()) as UnaOperator;
            const operand: Expression = parse_unary();
            return make_unary(operator, operand, index);
        }
        return parse_call();
    }

    /**
     * Parses function call expressions.
     *
     * Calls may be chained and accept a comma-separated
     * list of arguments.
     * Example:
     *      add(1, 2)
     * @returns Call expression AST node
     */
    function parse_call(): Expression {
        let expr: Expression = parse_primary();
        while (true) {
            if(match(TokenType.LEFT_PAREN)){
                if(expr.type !== "Variable"){
                    throw new UntypedscriptError(
                        ErrorKind.UnexpectedToken,
                        "Call must be done on identifier",
                        expr.index)
                    }
                expr = finish_call(expr);
            } else {
                break
            }
        }
        return expr;
    }

    /**
     * Helper function that parses arguments connected to an identifier. 
     * @params Callee Variable that is being called
     * @returns Call expression AST node
     */
    function finish_call(callee: Variable): Expression {
        const args: Array<Expression> = [];
        const index: number = previous().index
        if (!check(TokenType.RIGHT_PAREN)) {
            do {
                args.push(parse_expression())
            } while (match(TokenType.COMMA))
        }
        consume(TokenType.RIGHT_PAREN, "Expected ) after call");
        return make_call(callee, args, index)
    }

    /**
     * Parses the leaf nodes of an AST or parentheses
     *
     *
     * @returns Call expression AST node
     * @throws UntypedscriptError if the token could not be recognized 
     *         as a primary or parentheses
     */
    function parse_primary(): Expression {
        const index: number = peek().index;
        if(match(TokenType.NULL)) return make_literal(null, index)
        if(match(TokenType.TRUE)) return make_literal(true, index)
        if(match(TokenType.FALSE)) return make_literal(false, index)
        if(match(TokenType.IDENTIFIER)) return make_variable(get_sign(previous()) as string, index)
        if(match(TokenType.NUMBER_LIT, TokenType.STRING_LIT)) {
            const value: Value = get_sign(previous());
            return make_literal(value, index)
        }
        if(match(TokenType.LEFT_PAREN)) {
            const expr = parse_expression();
            consume(TokenType.RIGHT_PAREN, 'Expected ")" after expression, got:"' + get_sign(peek()) + '"')
            return expr;
        }
        throw new UntypedscriptError(ErrorKind.UnexpectedToken, "Expected an expression", index);
    }

    /**
     * Error recovery routine.
     *
     * Advances through tokens until a safe synchronization point
     * is reached. This prevents a single syntax error from causing
     * a cascade of additional parsing errors.
     *
     * Synchronization points include:
     *  - semicolons
     *  - statement starting tokens
     *  - closing braces
     */
    function synchronize(): void {
        parser.latest_was_expression = false;
        advance();

        while (!at_end()) {
            if (previous().type === TokenType.SEMICOLON) return;

            switch (peek().type) {
                case TokenType.FN:
                case TokenType.VAR:
                case TokenType.RETURN:
                case TokenType.PRINT:
                case TokenType.RIGHT_BRACE:
                    return;
            }

            advance();
        }
    }

    // Main loop of the scanner
    while (!at_end()) {
        try {
            const statement = parse_statement();
            parser.output.push(statement);
        } catch (e) {
            parser.has_error = true
            parser.latest_was_expression = false;
            parser.errors.push(e as UntypedscriptError);
            synchronize();
        }
    }
    return parser;
}


/**
 * Makes a Literal expression
 * @param value The value of the literal
 * @param index The source code position of the first character
 * @returns A Literal expression
 */
function make_literal(value: Value, index: number): Literal {
    return {
        type: "Literal",
        index,
        value
    }
}

/**
 * Makes a Unary expression
 * @param operator The unary operator
 * @param expr The expression the operator applies to
 * @param index The source code position of the operator
 * @returns A Unary expression
 */
function make_unary(operator: UnaOperator, expr: Expression, index: number): Unary {
    return {
        type: "Unary",
        index,
        operator,
        operand: expr
    }
}

/**
 * Makes a Binary expression
 * @param operator The binary operator
 * @param left The left side expression
 * @param right The right side expression
 * @param index The source code position of the operator
 * @returns A Binary expression
 */
function make_binary(operator: BinOperator, left: Expression, 
                                right: Expression, index: number): Binary {
    return {
        type: "Binary",
        index,
        operator,
        left,
        right,
    }
}

/**
 * Makes a Print statement
 * @param expr The expression to print the result of
 * @param index The source code position of the statement
 * @returns A Print statement
 */
function make_print(expr: Expression, index: number): Print {
    return {
        type: "Print",
        index,
        expression: expr,
    }
}

/**
 * Makes a variable declaration statement
 * @param name The name of the variable
 * @param initialiser The expression to assign to the variable, or null if it's uninitialized
 * @param index The source code position of the 'var' keyword
 * @param identifier The source code position of the identifier
 * @returns A VariableDec statement
 */
function make_var(name:string, initialiser: Expression | null, index: number, identifier_index: number): VariableDec {
    return {
        type: "Variable_declaration",
        index,
        identifier_index,
        name,
        initialiser
    }
}

/**
 * Makes a function declaration statement
 * @param name The name of the function
 * @param params An array of parameter names
 * @param body The body of the function
 * @param index The source code position of the 'fn' keyword
 * @returns A FunctionDec statement
 */
function make_fn(name:string, params:Array<string>, body: Block, index:number): FunctionDec {
    return {
        type: "Function_declaration",
        index,
        name,
        params,
        body,
    }
}

/**
 * Makes a return statement
 * @param expression The return value
 * @param index The source code position of the 'return' keyword
 * @returns A ReturnStatement statement
 */
function make_return(expression: Expression, index: number): ReturnStatement {
    return {
    type: "Return",
    index,
    expression,
    }
}

/**
 * Makes a variable expression
 * @param name The variable value
 * @param index The source code position of the identifier
 * @returns A Variable expression
 */
function make_variable(name: string, index: number): Variable {
    return {
        type: "Variable", 
        index,
        name
    }
}

/**
 * Makes an Assignment expression
 * @param name The variable name to assign to
 * @param value The expression to assign
 * @param index The source code position of the identifier
 * @returns An Assignment expression
 */
function make_assignment(name: string, value: Expression, index: number): Assignment {
    return {
        type: "Assignment",
        index,
        name,
        value,
    }
}

/**
 * Makes a Block expression
 * @param body The body of the block
 * @param index The source code position of the block
 * @returns A Block expression
 */
function make_block(body: Array<Expression | Statement>, index: number): Block {
    return {
    type: "Block",
    label: null, // TODO: Add support for labels
    index,
    body
    }
}

/**
 * Makes an Expression statement
 * @param expression The statement's expression
 * @param index The source code position of the statement
 * @returns An Expression statement
 */
function make_expression_statement(expression:Expression, index: number): ExpressionStatement {
    return {
        type: "Expression_statement",
        index,
        expression,
    }
}

/**
 * Makes an if/else expression
 * @param condition The 'if' condition to evaluate
 * @param if_then The expression to evaluate if the condition is true
 * @param if_else The optional expression to evaluate if the condition is false
 * @param index The source code position of the expression
 * @returns An If expression
 */
function make_if(condition: Expression, if_then:Expression, if_else:Expression | null, index:number): If {
    return {
        type: "If",
        index,
        condition,
        if_then,
        if_else
    }
}

/**
 * Makes an logical and/or expression
 * @param right The rightmost expression
 * @param left The leftmost expression
 * @param operator The logical operator to use
 * @param index The source code position of the expression
 * @returns A Logic expression
 */
function make_logic(right:Expression, operator: "or" | "and", left:Expression, index:number): Logic {
    return {
        type: "Logic",
        index,
        right,
        operator,
        left
    }
}

/**
 * Makes a While expression
 * @param condition The condition to evaluate
 * @param body The body of the loop
 * @param name An optional label for the loop
 * @param index The source code position of the expression
 * @returns A While expression
 */
function make_while(condition: Expression, body: Block, name: string | null, index: number): While {
    return {
        type: "While",
        index,
        condition,
        name,
        body,
    }
}

/**
 * Makes a function call expression
 * @param callee The identifier of the function
 * @param args The arguments to the function
 * @param index The source code position of the expression
 * @returns A Call expression
 */
function make_call(callee:Variable, args:Array<Expression>, index:number): Call {
    return {
        type: "Call",
        index,
        callee,
        args
    }
}
